crates/scheduler/tests/trybuild/fail/missing_scheduled_task_comma.stderr
error: expected `,`
 --> tests/trybuild/fail/missing_scheduled_task_comma.rs:5:5
  |
5 |     name_key = "task.name",
  |     ^^^^^^^^
